[gd_scene load_steps=9 format=3 uid="uid://d2b0rrgardqpr"]

[ext_resource type="Script" path="res://main.gd" id="1_5wr67"]
[ext_resource type="FontFile" uid="uid://c8bcbqh7b4umj" path="res://Fonts/font.otf" id="2_ebpxk"]
[ext_resource type="AudioStream" uid="uid://do5lifm5gsv2b" path="res://Audio/148.wav" id="3_d7i5q"]
[ext_resource type="Texture2D" uid="uid://c6jmq4884c7wi" path="res://Images/audioIconOn.png" id="4_3wl4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyqpo"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.266667, 0.278431, 0.352941, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldhlb"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.741176, 0.576471, 0.976471, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8x3xk"]
bg_color = Color(0.741176, 0.576471, 0.976471, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.741176, 0.576471, 0.976471, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bcbl1"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_5wr67")

[node name="Frames" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_ebpxk")
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 2

[node name="First" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 200.0
offset_bottom = 300.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.972549, 0.972549, 0.94902, 1)
theme_override_fonts/font = ExtResource("2_ebpxk")
theme_override_font_sizes/font_size = 127
text = "_"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Second" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 200.0
offset_right = 400.0
offset_bottom = 300.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.972549, 0.972549, 0.94902, 1)
theme_override_fonts/font = ExtResource("2_ebpxk")
theme_override_font_sizes/font_size = 127
text = "_"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Delta" type="Label" parent="Second"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 50.0
offset_right = 200.0
offset_bottom = 150.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.972549, 0.972549, 0.94902, 1)
theme_override_fonts/font = ExtResource("2_ebpxk")
theme_override_font_sizes/font_size = 63
horizontal_alignment = 1
vertical_alignment = 1

[node name="Third" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 400.0
offset_right = 600.0
offset_bottom = 300.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.972549, 0.972549, 0.94902, 1)
theme_override_fonts/font = ExtResource("2_ebpxk")
theme_override_font_sizes/font_size = 127
text = "_"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Delta" type="Label" parent="Third"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 50.0
offset_right = 200.0
offset_bottom = 150.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.972549, 0.972549, 0.94902, 1)
theme_override_fonts/font = ExtResource("2_ebpxk")
theme_override_font_sizes/font_size = 63
horizontal_alignment = 1
vertical_alignment = 1

[node name="Last" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 600.0
offset_right = 800.0
offset_bottom = 300.0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.972549, 0.972549, 0.94902, 1)
theme_override_fonts/font = ExtResource("2_ebpxk")
theme_override_font_sizes/font_size = 127
text = "_"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 316.5
offset_right = 483.5
offset_bottom = 42.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.266667, 0.278431, 0.352941, 1)
theme_override_colors/font_pressed_color = Color(0.156863, 0.164706, 0.211765, 1)
theme_override_colors/font_hover_color = Color(0.741176, 0.576471, 0.976471, 1)
theme_override_colors/font_focus_color = Color(0.266667, 0.278431, 0.352941, 1)
theme_override_colors/font_hover_pressed_color = Color(0.741176, 0.576471, 0.976471, 1)
theme_override_colors/font_disabled_color = Color(0.266667, 0.278431, 0.352941, 1)
theme_override_colors/font_outline_color = Color(0.266667, 0.278431, 0.352941, 1)
theme_override_fonts/font = ExtResource("2_ebpxk")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_hyqpo")
theme_override_styles/hover = SubResource("StyleBoxFlat_ldhlb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8x3xk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bcbl1")
text = "Mode: 1-4-8"

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_d7i5q")
volume_db = 3.0

[node name="AudioToggle" type="Button" parent="."]
offset_left = 751.0
offset_right = 800.0
offset_bottom = 43.0
focus_mode = 0
theme_override_colors/icon_normal_color = Color(0.266667, 0.278431, 0.352941, 1)
theme_override_colors/icon_pressed_color = Color(0.741176, 0.576471, 0.976471, 1)
theme_override_colors/icon_hover_color = Color(0.741176, 0.576471, 0.976471, 1)
theme_override_fonts/font = ExtResource("2_ebpxk")
action_mode = 0
icon = ExtResource("4_3wl4h")
flat = true

[connection signal="pressed" from="ModeButton" to="." method="_on_mode_button_pressed"]
[connection signal="button_down" from="AudioToggle" to="." method="_on_audio_toggle_button_down"]
